# uvl-spellchecker

./: .pre-commit-config.yaml  ComponentSpellcheckerServiceSetup.py  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
src/main/behavior/: Spellchecker.py
src/main/connector/: ComponentSpellcheckerRestConnectorProvider.py  ForeignComponentSpellcheckerRestConnectoRequester.py
src/main/structure/: DataModels.py  SpellcheckedDatasetCreator.py
src/main/tooling/: Logger.py
src/tests/: call_RestConnectorProvider.sh  komoot_reviews_1.json  test_SpellcheckDataset.py
