[project]
name = "uvl_spellchecker"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
version = "0.1"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "mypy",
    "flake8",
    "toml",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "platformdirs==3.10.0",
]
build-backend = "setuptools.build_meta"


[tool.flake8]
ignore = ["E501"]
exclude = [
    ".git",
	"__pycache__",
]


[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.isort]
multi_line_output = 2
line_length = 500
